Fixed add report page save button spacing

--- a/workflow/static/workflow/css/workflow.css
+++ b/workflow/static/workflow/css/workflow.css
@@ -339,8 +339,3 @@ ul.doc-attrs {
 
 
 }
-
-@media (max-width:768px){
-
-
-}
